Work on file upload

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,13 @@
 {% extends 'base.html' %}
 
+{% block links %}
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/index.css') }}">
+{% endblock %}
+
 {% block content %}
-    <h1>Hello world!</h1>
+    <div id="target">You can drag an image file here</div>
+{% endblock %}
+
+{% block scripts %}
+    <script src="{{ url_for('static', filename='js/index.js') }}"></script>
 {% endblock %}
