--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,11 @@
 {% endblock %}
 
 {% block content %}
-    <div id="target">You can drag an image file here</div>
+    <h3>Drag an image file here</h3>
+    <div id="target">
+        <img id="output">
+    </div>
+    <button id="upload">Upload</button>
 {% endblock %}
 
 {% block scripts %}
